styles/Pokedex-styles.css
* {
  box-sizing: border-box;
}

.hidden {
  display: none;
}

body {
  margin: 0 auto;
  width: 100vw;
  background-image: url(../imgs/desktop-wallpaper-rotom-pokedex-background.jpg);
  background-size: 100vw;

  font-family: 'Poppins', sans-serif;
}

.header {
  width: 20em;
}

.pokemon-search {
  display: flex;
  flex-direction: column;
}

.pokemon-input {
  display: flex;
  flex-direction: row;
  width: 200px;
  margin: 0 auto;
  margin-top: 1.1em;

}

input {
  background-color: rgb(255, 255, 255);
}

h1 {
  text-align: center;
  color: rgb(0, 0, 0);

}

.pokedex-header {
  margin-top: 2em;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1em;
}



::placeholder {
  color: rgba(0, 0, 0, 0.686);
}

input {
  margin: 0 auto;

}

button {
  background-color: rgb(7, 190, 86);
}

#pokemonSprite {
  justify-self: center;
  align-self: center;
  margin-top: 2.9em;


  width: 9.1em;

  padding: 0.1em;
  background-color: rgba(255, 255, 255, 0.846);
  border-radius: 40px;
  margin-inline-start: 7.4em;






}

.pxdx-logo {
  width: 7.5em;
}

.pokemon-in-pokedex {
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: center;
  margin: 0 auto;
  border-radius: 80px;

  min-width: 305.391px;



  margin-top: 1em;
  border: 2px solid rgb(36, 36, 36);

  background-image: url(../imgs/wp8813113.webp);
  background-size: 24em;
  width: 20%;
  height: fit-content;

}

.pokemon-info {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin: 0 auto;
  padding: 2em;

  margin-top: 0.4em;
}

p {
  color: white;
  font-size: 1.2em;
  line-height: 1.5em;

}

.loader-section {
  display: flex;
  justify-content: center;
  align-items: center;
}

.loader {

  width: 10%;
  height: 10%;

}

.credit {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  margin-top: 2em;
  padding: 1em;
  width: 20em;

  background-color: rgb(217, 18, 18);
  border-radius: 60px;
}

.credit-text {
  text-align: center;
  margin: 0 auto;
}

